# Excel-File-processing-Subroutine-as-a-Rust-App

./: .gitignore  Cargo.toml  README.md  color_profiling.txt
data/: 0329 giao hang.xlsx  db.sqlite
frontend/: index.css  index.html  index.js
src/: colors.rs  error.rs  lib.rs  main.rs  web.rs
src/data/: mod.rs  model.rs  sqlite_data_Source.rs  sqlite_ds.rs
